Platform - Get rid of message sender - SkyXplore Game migrated